--- a/250107_neff_3 mode_delete0.ipynb
+++ b/250107_neff_3 mode_delete0.ipynb
@@ -156,6 +156,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c3dd588b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"hello world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "33485410",
    "metadata": {},
