--- a/metamaterials_GAN_v1.ipynb
+++ b/metamaterials_GAN_v1.ipynb
@@ -804,6 +804,8 @@
     "import torch.optim as optim\n",
     "import time\n",
     "import numpy as np\n",
+    "import matplotlib\n",
+    "matplotlib.use('TkAgg') # Or 'QtAgg', 'WXAgg'\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Assume Generator, Discriminator, dataloader, (and optional val_dataloader) are defined above.\n",
@@ -880,32 +882,6 @@
     "    train_d_losses.append(avg_d)\n",
     "    train_g_losses.append(avg_g)\n",
     "\n",
-    "    # Optional validation\n",
-    "    # if 'val_dataloader' in globals():\n",
-    "    #     with torch.no_grad():\n",
-    "    #         d_val = []\n",
-    "    #         g_val = []\n",
-    "    #         for em_v, wts_v, prm_v, wg_v in val_dataloader:\n",
-    "    #             bs_v = em_v.size(0)\n",
-    "    #             real_lbl_v = torch.ones(bs_v,1,device=device)\n",
-    "\n",
-    "    #             em_v, wts_v, prm_v = em_v.to(device), wts_v.to(device), prm_v.to(device)\n",
-    "    #             wg_v = wg_v.to(device).unsqueeze(1)\n",
-    "    #             cond_v = torch.cat([em_v, wts_v], dim=1)\n",
-    "\n",
-    "    #             # D loss\n",
-    "    #             r_out = discriminator(wg_v, prm_v, cond_v)\n",
-    "    #             f_wg_v, f_prm_v = generator(cond_v)\n",
-    "    #             f_out = discriminator(f_wg_v, f_prm_v, cond_v)\n",
-    "    #             d_val.append((criterion_adv(r_out, real_lbl_v) +\n",
-    "    #                           criterion_adv(f_out, torch.zeros(bs_v,1,device=device))).item())\n",
-    "\n",
-    "    #             # G loss\n",
-    "    #             g_val.append((criterion_adv(f_out, real_lbl_v) +\n",
-    "    #                           lambda_param*criterion_param(f_prm_v, prm_v)).item())\n",
-    "\n",
-    "    #         val_d_losses.append(np.mean(d_val))\n",
-    "    #         val_g_losses.append(np.mean(g_val))\n",
     "\n",
     "    elapsed = time.perf_counter() - start\n",
     "    print(f\"Epoch {epoch:3d}/{epochs} — D: {avg_d:.4f}, G: {avg_g:.4f} — {elapsed:.1f}s\")\n",
@@ -914,9 +890,7 @@
     "    ax.clear()\n",
     "    ax.plot(train_d_losses, label='Train D Loss')\n",
     "    ax.plot(train_g_losses, label='Train G Loss')\n",
-    "    # if val_d_losses:\n",
-    "    #     ax.plot(val_d_losses, '--', label='Val D Loss')\n",
-    "    #     ax.plot(val_g_losses, '--', label='Val G Loss')\n",
+    "\n",
     "    ax.set_xlabel('Epoch')\n",
     "    ax.set_ylabel('Loss')\n",
     "    ax.set_title('GAN Losses (Live)')\n",
@@ -981,6 +955,50 @@
     "plt.colorbar()\n",
     "plt.title(\"Generated 2D Waveguide Pattern\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m ax\u001b[39m.\u001b[39mlegend(loc\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mupper right\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     19\u001b[0m plt\u001b[39m.\u001b[39mtight_layout()\n\u001b[0;32m---> 20\u001b[0m plt\u001b[39m.\u001b[39;49mpause(\u001b[39m0.1\u001b[39;49m)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.11.1/lib/python3.11/site-packages/matplotlib/pyplot.py:756\u001b[0m, in \u001b[0;36mpause\u001b[0;34m(interval)\u001b[0m\n\u001b[1;32m    754\u001b[0m         canvas\u001b[39m.\u001b[39mdraw_idle()\n\u001b[1;32m    755\u001b[0m     show(block\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m--> 756\u001b[0m     canvas\u001b[39m.\u001b[39;49mstart_event_loop(interval)\n\u001b[1;32m    757\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    758\u001b[0m     time\u001b[39m.\u001b[39msleep(interval)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.11.1/lib/python3.11/site-packages/matplotlib/backends/_backend_tk.py:423\u001b[0m, in \u001b[0;36mFigureCanvasTk.start_event_loop\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    420\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    421\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_event_loop_id \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_tkcanvas\u001b[39m.\u001b[39mafter_idle(\n\u001b[1;32m    422\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstop_event_loop)\n\u001b[0;32m--> 423\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_tkcanvas\u001b[39m.\u001b[39;49mmainloop()\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.11.1/lib/python3.11/tkinter/__init__.py:1485\u001b[0m, in \u001b[0;36mMisc.mainloop\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m   1483\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmainloop\u001b[39m(\u001b[39mself\u001b[39m, n\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[1;32m   1484\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Call the mainloop of Tk.\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1485\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtk\u001b[39m.\u001b[39mmainloop(n)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.11.1/lib/python3.11/tkinter/__init__.py:1943\u001b[0m, in \u001b[0;36mCallWrapper.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1940\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msubst \u001b[39m=\u001b[39m subst\n\u001b[1;32m   1941\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwidget \u001b[39m=\u001b[39m widget\n\u001b[0;32m-> 1943\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs):\n\u001b[1;32m   1944\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Apply first function SUBST to arguments, than FUNC.\"\"\"\u001b[39;00m\n\u001b[1;32m   1945\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib\n",
+    "matplotlib.use('TkAgg') # Or 'QtAgg', 'WXAgg'\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.ion()\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8,5))\n",
+    "bruh = []\n",
+    "bruh2 = []\n",
+    "for i in range(0,100):\n",
+    "    bruh.append(i)\n",
+    "    bruh2.append(i)\n",
+    "    ax.clear()\n",
+    "    ax.plot(bruh, label='Train D Loss')\n",
+    "    ax.plot(bruh2, label='Train G Loss')\n",
+    "    ax.set_xlabel('Epoch')\n",
+    "    ax.set_ylabel('Loss')\n",
+    "    ax.set_title('GAN Losses (Live)')\n",
+    "    ax.legend(loc='upper right')\n",
+    "    plt.tight_layout()\n",
+    "    plt.pause(0.1)"
    ]
   }
  ],
