Began work on WGAN, improved v1 to import to v2

--- a/metamaterials_GAN_v1.ipynb
+++ b/metamaterials_GAN_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -30,11 +30,12 @@
     "import os\n",
     "## Enforce 4-fold symmetry\n",
     "## Give only 1/4 of waveguide\n",
-    "print(\"Torch version:\", torch.__version__)\n",
-    "print(\"CUDA available:\", torch.cuda.is_available())\n",
-    "print(\"CUDA version:\", torch.version.cuda)\n",
-    "print(\"Number of GPUs:\", torch.cuda.device_count())\n",
-    "print(\"GPU name:\", torch.cuda.get_device_name(0) if torch.cuda.device_count() > 0 else \"No GPU detected\")"
+    "if __name__ == \"__main__\":\n",
+    "    print(\"Torch version:\", torch.__version__)\n",
+    "    print(\"CUDA available:\", torch.cuda.is_available())\n",
+    "    print(\"CUDA version:\", torch.version.cuda)\n",
+    "    print(\"Number of GPUs:\", torch.cuda.device_count())\n",
+    "    print(\"GPU name:\", torch.cuda.get_device_name(0) if torch.cuda.device_count() > 0 else \"No GPU detected\")"
    ]
   },
   {
@@ -144,9 +145,10 @@
     "        return eigenmode, weight, params, waveguide\n",
     "\n",
     "dataset = WaveguideDataset('train_test_split.h5')\n",
-    "load_item(dataset.__getitem__(2))\n",
     "dataloader = DataLoader(dataset, batch_size=32, shuffle=True)\n",
-    "print(dataset.waveguides.shape)"
+    "if __name__ == \"__main__\":\n",
+    "    load_item(dataset.__getitem__(2))\n",
+    "    print(dataset.waveguides.shape)"
    ]
   },
   {
@@ -320,29 +322,7 @@
     "        x = torch.cat([x_img, x_params, x_cond], dim=1)\n",
     "        validity = self.fc_final(x)\n",
     "        \n",
-    "        return validity\n",
-    "\n",
-    "# ---------------------------\n",
-    "# Example usage\n",
-    "# ---------------------------\n",
-    "if __name__ == \"__main__\":\n",
-    "    # Suppose we have a batch size of 16.\n",
-    "    batch_size = 16\n",
-    "    # Create dummy condition input (4 eigenmodes + 4 weights = 8 features per sample)\n",
-    "    cond = torch.randn(batch_size, 8)\n",
-    "    \n",
-    "    # Initialize the generator and forward propagate.\n",
-    "    netG = Generator(cond_dim=8)\n",
-    "    fake_waveguide, fake_params = netG(cond)\n",
-    "    print(\"Generator output:\")\n",
-    "    print(\"  waveguide shape:\", fake_waveguide.shape)  # Should be (16, 1, 32, 32)\n",
-    "    print(\"  params shape:\", fake_params.shape)        # Should be (16, 4)\n",
-    "    \n",
-    "    # Now initialize the discriminator.\n",
-    "    netD = Discriminator(cond_dim=8)\n",
-    "    # Here, we use the generated outputs along with the same condition.\n",
-    "    validity = netD(fake_waveguide, fake_params, cond)\n",
-    "    print(\"Discriminator output shape:\", validity.shape)  # Should be (16, 1)\n"
+    "        return validity\n"
    ]
   },
   {
@@ -359,13 +339,10 @@
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
     "generator = Generator().to(device)\n",
     "discriminator = Discriminator().to(device)\n",
-    "\n",
     "criterion = nn.BCELoss()\n",
     "lr = 0.0002\n",
-    "\n",
     "optimizer_g = optim.Adam(generator.parameters(), lr=lr)\n",
     "optimizer_d = optim.Adam(discriminator.parameters(), lr=lr)"
    ]
@@ -770,116 +747,112 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import time\n",
-    "import numpy as np\n",
-    "import matplotlib\n",
-    "matplotlib.use('TkAgg') # Or 'QtAgg', 'WXAgg'\n",
-    "import matplotlib.pyplot as plt\n",
+    "if __name__ == \"__main__\":\n",
+    "    import matplotlib\n",
+    "    matplotlib.use('TkAgg') # Or 'QtAgg', 'WXAgg'\n",
+    "    import matplotlib.pyplot as plt\n",
     "\n",
-    "# Assume Generator, Discriminator, dataloader, (and optional val_dataloader) are defined above.\n",
+    "    # Assume Generator, Discriminator, dataloader, (and optional val_dataloader) are defined above.\n",
     "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "lr = 2e-4\n",
-    "epochs = 100\n",
-    "lambda_param = 10.0\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    lr = 2e-4\n",
+    "    epochs = 100\n",
+    "    lambda_param = 10.0\n",
     "\n",
-    "# Instantiate models and losses\n",
-    "generator     = Generator(cond_dim=8).to(device)\n",
-    "discriminator = Discriminator(cond_dim=8).to(device)\n",
-    "criterion_adv   = nn.BCELoss()\n",
-    "criterion_param = nn.MSELoss()\n",
+    "    # Instantiate models and losses\n",
+    "    generator     = Generator(cond_dim=8).to(device)\n",
+    "    discriminator = Discriminator(cond_dim=8).to(device)\n",
+    "    criterion_adv   = nn.BCELoss()\n",
+    "    criterion_param = nn.MSELoss()\n",
     "\n",
-    "optimizer_g = optim.Adam(generator.parameters(), lr=lr, betas=(0.5, 0.999))\n",
-    "optimizer_d = optim.Adam(discriminator.parameters(), lr=lr, betas=(0.5, 0.999))\n",
+    "    optimizer_g = optim.Adam(generator.parameters(), lr=lr, betas=(0.5, 0.999))\n",
+    "    optimizer_d = optim.Adam(discriminator.parameters(), lr=lr, betas=(0.5, 0.999))\n",
     "\n",
-    "# Prepare lists for logging\n",
-    "train_d_losses = []\n",
-    "train_g_losses = []\n",
-    "# val_d_losses   = []\n",
-    "# val_g_losses   = []\n",
+    "    # Prepare lists for logging\n",
+    "    train_d_losses = []\n",
+    "    train_g_losses = []\n",
+    "    # val_d_losses   = []\n",
+    "    # val_g_losses   = []\n",
     "\n",
-    "# Set up interactive plotting\n",
-    "plt.ion()\n",
-    "fig, ax = plt.subplots(figsize=(8,5))\n",
+    "    # Set up interactive plotting\n",
+    "    plt.ion()\n",
+    "    fig, ax = plt.subplots(figsize=(8,5))\n",
     "\n",
-    "for epoch in range(1, epochs+1):\n",
-    "    start = time.perf_counter()\n",
-    "    d_epoch = []\n",
-    "    g_epoch = []\n",
+    "    for epoch in range(1, epochs+1):\n",
+    "        start = time.perf_counter()\n",
+    "        d_epoch = []\n",
+    "        g_epoch = []\n",
     "\n",
-    "    for em, wts, prm, real_wg in dataloader:\n",
-    "        bs = em.size(0)\n",
-    "        real_lbl = torch.ones(bs,1,device=device)\n",
-    "        fake_lbl = torch.zeros(bs,1,device=device)\n",
-    "        # print('working')\n",
-    "        em, wts, prm = em.to(device), wts.to(device), prm.to(device)\n",
-    "        real_wg = real_wg.to(device).unsqueeze(1)  # (B,1,32,32)\n",
-    "        cond    = torch.cat([em, wts], dim=1)\n",
+    "        for em, wts, prm, real_wg in dataloader:\n",
+    "            bs = em.size(0)\n",
+    "            real_lbl = torch.ones(bs,1,device=device)\n",
+    "            fake_lbl = torch.zeros(bs,1,device=device)\n",
+    "            # print('working')\n",
+    "            em, wts, prm = em.to(device), wts.to(device), prm.to(device)\n",
+    "            real_wg = real_wg.to(device).unsqueeze(1)  # (B,1,32,32)\n",
+    "            cond    = torch.cat([em, wts], dim=1)\n",
     "\n",
-    "        # — Train Discriminator —\n",
-    "        optimizer_d.zero_grad()\n",
-    "        real_out = discriminator(real_wg, prm, cond)\n",
-    "        d_real   = criterion_adv(real_out, real_lbl)\n",
+    "            # — Train Discriminator —\n",
+    "            optimizer_d.zero_grad()\n",
+    "            real_out = discriminator(real_wg, prm, cond)\n",
+    "            d_real   = criterion_adv(real_out, real_lbl)\n",
     "\n",
-    "        fake_wg, fake_prm = generator(cond)\n",
-    "        fake_wg = (fake_wg >= 0.5).float()\n",
-    "        fake_out          = discriminator(fake_wg, fake_prm, cond)\n",
-    "        d_fake            = criterion_adv(fake_out, fake_lbl)\n",
+    "            fake_wg, fake_prm = generator(cond)\n",
+    "            fake_wg = (fake_wg >= 0.5).float()\n",
+    "            fake_out          = discriminator(fake_wg, fake_prm, cond)\n",
+    "            d_fake            = criterion_adv(fake_out, fake_lbl)\n",
     "\n",
-    "        d_loss = d_real + d_fake\n",
-    "        d_loss.backward()\n",
-    "        optimizer_d.step()\n",
+    "            d_loss = d_real + d_fake\n",
+    "            d_loss.backward()\n",
+    "            optimizer_d.step()\n",
     "\n",
-    "        # — Train Generator —\n",
-    "        optimizer_g.zero_grad()\n",
-    "        fake_wg2, fake_prm2 = generator(cond)\n",
-    "        fake_wg2 = (fake_wg2 >= 0.5).float()\n",
-    "        fake_out2           = discriminator(fake_wg2, fake_prm2, cond)\n",
+    "            # — Train Generator —\n",
+    "            optimizer_g.zero_grad()\n",
+    "            fake_wg2, fake_prm2 = generator(cond)\n",
+    "            fake_wg2 = (fake_wg2 >= 0.5).float()\n",
+    "            fake_out2           = discriminator(fake_wg2, fake_prm2, cond)\n",
     "\n",
-    "        g_adv   = criterion_adv(fake_out2, real_lbl)\n",
-    "        g_param = criterion_param(fake_prm2, prm)\n",
-    "        g_loss  = g_adv + lambda_param * g_param\n",
+    "            g_adv   = criterion_adv(fake_out2, real_lbl)\n",
+    "            g_param = criterion_param(fake_prm2, prm)\n",
+    "            g_loss  = g_adv + lambda_param * g_param\n",
     "\n",
-    "        g_loss.backward()\n",
-    "        optimizer_g.step()\n",
+    "            g_loss.backward()\n",
+    "            optimizer_g.step()\n",
     "\n",
-    "        d_epoch.append(d_loss.item())\n",
-    "        g_epoch.append(g_loss.item())\n",
+    "            d_epoch.append(d_loss.item())\n",
+    "            g_epoch.append(g_loss.item())\n",
     "\n",
-    "    # Average losses this epoch\n",
-    "    avg_d = np.mean(d_epoch)\n",
-    "    avg_g = np.mean(g_epoch)\n",
-    "    train_d_losses.append(avg_d)\n",
-    "    train_g_losses.append(avg_g)\n",
+    "        # Average losses this epoch\n",
+    "        avg_d = np.mean(d_epoch)\n",
+    "        avg_g = np.mean(g_epoch)\n",
+    "        train_d_losses.append(avg_d)\n",
+    "        train_g_losses.append(avg_g)\n",
     "\n",
     "\n",
-    "    elapsed = time.perf_counter() - start\n",
-    "    print(f\"Epoch {epoch:3d}/{epochs} — D: {avg_d:.4f}, G: {avg_g:.4f} — {elapsed:.1f}s\")\n",
+    "        elapsed = time.perf_counter() - start\n",
+    "        print(f\"Epoch {epoch:3d}/{epochs} — D: {avg_d:.4f}, G: {avg_g:.4f} — {elapsed:.1f}s\")\n",
     "\n",
-    "    # — Update live plot —\n",
-    "    ax.clear()\n",
-    "    ax.plot(train_d_losses, label='Train D Loss')\n",
-    "    ax.plot(train_g_losses, label='Train G Loss')\n",
+    "        # — Update live plot —\n",
+    "        ax.clear()\n",
+    "        ax.plot(train_d_losses, label='Train D Loss')\n",
+    "        ax.plot(train_g_losses, label='Train G Loss')\n",
     "\n",
-    "    ax.set_xlabel('Epoch')\n",
-    "    ax.set_ylabel('Loss')\n",
-    "    ax.set_title('GAN Losses (Live)')\n",
-    "    ax.legend(loc='upper right')\n",
-    "    plt.tight_layout()\n",
-    "    plt.pause(0.1)  # small pause to render\n",
+    "        ax.set_xlabel('Epoch')\n",
+    "        ax.set_ylabel('Loss')\n",
+    "        ax.set_title('GAN Losses (Live)')\n",
+    "        ax.legend(loc='upper right')\n",
+    "        plt.tight_layout()\n",
+    "        plt.pause(0.1)  # small pause to render\n",
     "\n",
-    "plt.ioff()\n",
-    "plt.show()\n",
+    "    plt.ioff()\n",
+    "    plt.show()\n",
     "\n",
-    "save_dir = \"./models\"\n",
-    "os.makedirs(save_dir, exist_ok=True)\n",
-    "save_path = os.path.join(save_dir, \"generator_2.pth\")\n",
-    "# saving the parameters\n",
-    "torch.save(generator.state_dict(), save_path)\n",
-    "print(f\"Generator state_dict saved to {save_path}\")\n"
+    "    save_dir = \"./models\"\n",
+    "    os.makedirs(save_dir, exist_ok=True)\n",
+    "    save_path = os.path.join(save_dir, \"generator.pth\")\n",
+    "    # saving the parameters\n",
+    "    torch.save(generator.state_dict(), save_path)\n",
+    "    print(f\"Generator state_dict saved to {save_path}\")\n"
    ]
   },
   {
@@ -898,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -910,19 +883,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[[[1., 1., 1.,  ..., 1., 1., 1.],\n",
-      "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
-      "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
-      "          ...,\n",
-      "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
-      "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
-      "          [1., 1., 1.,  ..., 1., 1., 1.]]]])\n"
-     ]
     },
     {
      "data": {
@@ -946,41 +906,43 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "%matplotlib inline\n",
-    "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "gen = Generator(cond_dim=8).to(device)\n",
-    "\n",
-    "gen.load_state_dict(torch.load(save_path, map_location=device))\n",
-    "gen.eval()\n",
-    "\n",
     "def generate_waveguide(generator, eigenmodes_weights):\n",
     "    device = next(generator.parameters()).device\n",
     "    x = torch.tensor(eigenmodes_weights, dtype=torch.float32) \\\n",
-    "             .unsqueeze(0) \\\n",
-    "             .to(device)\n",
+    "            .unsqueeze(0) \\\n",
+    "            .to(device)\n",
     "\n",
     "    with torch.no_grad():\n",
     "        waveguide, params = generator(x)\n",
     "    return waveguide, params\n",
-    "test_vals = load_item(dataset.__getitem__(1), False)\n",
-    "cond = np.concatenate((test_vals['Eigenmodes'], test_vals['Weights']))\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    %matplotlib inline\n",
     "\n",
-    "gen_waveguide, gen_params = generate_waveguide(gen, cond)\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "# print(gen_waveguide)\n",
-    "gen_waveguide = (gen_waveguide >= 0.51).float()\n",
+    "    gen = Generator(cond_dim=8).to(device)\n",
     "\n",
-    "wg = gen_waveguide.squeeze().cpu().numpy()\n",
+    "    gen.load_state_dict(torch.load(save_path, map_location=device))\n",
+    "    gen.eval()\n",
     "\n",
-    "plot_shape(wg)\n",
+    "   \n",
+    "    test_vals = load_item(dataset.__getitem__(1), False)\n",
+    "    cond = np.concatenate((test_vals['Eigenmodes'], test_vals['Weights']))\n",
     "\n",
-    "print(f\"Conditions: {cond}\")\n",
-    "print(f\"Real Params: {test_vals['Params']}\")\n",
-    "print(f\"Generated Params: {gen_params.squeeze().cpu().numpy()}\")\n",
-    "plt.show()\n"
+    "    gen_waveguide, gen_params = generate_waveguide(gen, cond)\n",
+    "\n",
+    "    # print(gen_waveguide)\n",
+    "    gen_waveguide = (gen_waveguide >= 0.51).float()\n",
+    "\n",
+    "    wg = gen_waveguide.squeeze().cpu().numpy()\n",
+    "\n",
+    "    plot_shape(wg)\n",
+    "\n",
+    "    print(f\"Conditions: {cond}\")\n",
+    "    print(f\"Real Params: {test_vals['Params']}\")\n",
+    "    print(f\"Generated Params: {gen_params.squeeze().cpu().numpy()}\")\n",
+    "    plt.show()\n"
    ]
   }
  ],
