adam instead of rmsprop

--- a/metamaterials_GAN_wgan-gp.ipynb
+++ b/metamaterials_GAN_wgan-gp.ipynb
@@ -141,15 +141,18 @@
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "generator = Generator().to(device)\n",
-    "critic    = Critic().to(device)\n",
+    "# Models\n",
+    "generator = Generator(cond_dim=8).to(device)\n",
+    "critic    = Critic(cond_dim=8).to(device)\n",
     "\n",
-    "lr = 5e-5\n",
-    "n_critic = 5 # how many critic steps per generator step\n",
-    "clip_value = 0.01 # weight‑clipping range\n",
+    "# Hyper‑parameters\n",
+    "lr         = 1e-4        # slightly higher than RMSprop WGAN\n",
+    "n_critic   = 5           # critic steps per generator step\n",
+    "lambda_gp  = 10.0        # gradient penalty weight\n",
     "\n",
-    "optimizer_g = optim.RMSprop(generator.parameters(), lr=lr)\n",
-    "optimizer_c = optim.RMSprop(critic.parameters(),    lr=lr)"
+    "# Optimizers (WGAN‑GP uses Adam safely)\n",
+    "optimizer_g = optim.Adam(generator.parameters(), lr=lr, betas=(0.5, 0.9))\n",
+    "optimizer_c = optim.Adam(critic.parameters(),    lr=lr, betas=(0.5, 0.9))"
    ]
   },
   {
@@ -164,12 +167,8 @@
     "    import matplotlib.pyplot as plt\n",
     "\n",
     "    # — Hyperparameters —\n",
-    "    device       = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "    lr           = 1e-4\n",
     "    epochs       = 100\n",
     "    lambda_param = 10.0    # weight for parameter‐MSE term\n",
-    "    lambda_gp    = 10.0    # gradient‐penalty weight\n",
-    "    n_critic     = 5       # critic steps per gen step\n",
     "\n",
     "    # — Models (assumes Generator, Critic, compute_gradient_penalty are defined above) —\n",
     "    generator = Generator(cond_dim=8).to(device)\n",
