--- a/metamaterials_GAN_wgan-gp.ipynb
+++ b/metamaterials_GAN_wgan-gp.ipynb
@@ -439,7 +439,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3.11.1 64-bit ('3.11.1')",
    "language": "python",
    "name": "python3"
   },
@@ -453,9 +453,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.1"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "904b27c75b92146183e9f1345c638188bb604f0e4fe123b9be54acbb552124e7"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
